
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ HRESULT ;
typedef int HANDLE ;
typedef int BOOL ;


 int CloseHandle (int ) ;
 int FALSE ;
 scalar_t__ FilterConnectCommunicationPort (char*,int ,int *,int ,int *,int *) ;
 scalar_t__ S_OK ;
 int TRUE ;

BOOL RegisterProcessByCommunicationPort()
{
 HRESULT hResult;
 HANDLE hPort;
 hResult = FilterConnectCommunicationPort(
  L"\\GLOBAL??\\ZAM_MiniFilter_CommPort",
  0,
  ((void*)0),
  0,
  ((void*)0),
  &hPort);

 if (hResult != S_OK)
 {
  return FALSE;
 }
 CloseHandle(hPort);
 return TRUE;
}
