; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_43973.c_RegisterProcessByCommunicationPort.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_43973.c_RegisterProcessByCommunicationPort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [34 x i32] [i32 92, i32 71, i32 76, i32 79, i32 66, i32 65, i32 76, i32 63, i32 63, i32 92, i32 90, i32 65, i32 77, i32 95, i32 77, i32 105, i32 110, i32 105, i32 70, i32 105, i32 108, i32 116, i32 101, i32 114, i32 95, i32 67, i32 111, i32 109, i32 109, i32 80, i32 111, i32 114, i32 116, i32 0], align 4
@S_OK = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RegisterProcessByCommunicationPort() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = call i64 @FilterConnectCommunicationPort(i8* bitcast ([34 x i32]* @.str to i8*), i32 0, i32* null, i32 0, i32* null, i32* %3)
  store i64 %4, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = load i64, i64* @S_OK, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = load i32, i32* @FALSE, align 4
  store i32 %9, i32* %1, align 4
  br label %14

10:                                               ; preds = %0
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @CloseHandle(i32 %11)
  %13 = load i32, i32* @TRUE, align 4
  store i32 %13, i32* %1, align 4
  br label %14

14:                                               ; preds = %10, %8
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i64 @FilterConnectCommunicationPort(i8*, i32, i32*, i32, i32*, i32*) #1

declare dso_local i32 @CloseHandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
